tests/baselines/reference/esDecorators-classDeclaration-exportModifier.2(strict=true).errors.txt
error TS-1: Pre-emit (27) and post-emit (28) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
file1.ts(2,2): error TS7005: Variable 'dec' implicitly has an 'any' type.
file10.ts(2,2): error TS7005: Variable 'dec' implicitly has an 'any' type.
file11.ts(2,9): error TS7005: Variable 'dec' implicitly has an 'any' type.
file12.ts(2,17): error TS7005: Variable 'dec' implicitly has an 'any' type.
file13.ts(2,1): error TS1434: Unexpected keyword or identifier.
file13.ts(2,1): error TS2304: Cannot find name 'abstract'.
file13.ts(2,11): error TS7005: Variable 'dec' implicitly has an 'any' type.
file14.ts(2,1): error TS1128: Declaration or statement expected.
file14.ts(2,8): error TS1434: Unexpected keyword or identifier.
file14.ts(2,8): error TS2304: Cannot find name 'abstract'.
file14.ts(2,18): error TS7005: Variable 'dec' implicitly has an 'any' type.
file15.ts(2,16): error TS2304: Cannot find name 'abstract'.
file15.ts(2,25): error TS1005: ';' expected.
file15.ts(2,26): error TS7005: Variable 'dec' implicitly has an 'any' type.
file2.ts(2,2): error TS7005: Variable 'dec' implicitly has an 'any' type.
file3.ts(2,8): error TS1206: Decorators are not valid here.
file3.ts(2,9): error TS7005: Variable 'dec' implicitly has an 'any' type.
file4.ts(2,9): error TS7005: Variable 'dec' implicitly has an 'any' type.
file5.ts(2,17): error TS7005: Variable 'dec' implicitly has an 'any' type.
file6.ts(2,2): error TS7005: Variable 'dec' implicitly has an 'any' type.
file6.ts(2,13): error TS8038: Decorators may not appear after 'export' or 'export default' if they also appear before 'export'.
file6.ts(2,14): error TS7005: Variable 'dec' implicitly has an 'any' type.
file7.ts(2,2): error TS7005: Variable 'dec' implicitly has an 'any' type.
file7.ts(2,21): error TS8038: Decorators may not appear after 'export' or 'export default' if they also appear before 'export'.
file7.ts(2,22): error TS7005: Variable 'dec' implicitly has an 'any' type.
file8.ts(2,2): error TS7005: Variable 'dec' implicitly has an 'any' type.
file9.ts(2,2): error TS7005: Variable 'dec' implicitly has an 'any' type.


!!! error TS-1: Pre-emit (27) and post-emit (28) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
!!! related TS-1: The excess diagnostics are:
!!! related TS7034 global.ts:2:5: Variable 'dec' implicitly has type 'any' in some locations where its type cannot be determined.
==== global.ts (0 errors) ====
    /** @type {*} */
    var dec;
    
==== file1.ts (1 errors) ====
    // ok
    @dec export class C1 { }
     ~~~
!!! error TS7005: Variable 'dec' implicitly has an 'any' type.
    
==== file2.ts (1 errors) ====
    // ok
    @dec export default class C2 {}
     ~~~
!!! error TS7005: Variable 'dec' implicitly has an 'any' type.
    
==== file3.ts (2 errors) ====
    // error
    export @dec default class C3 {}
           ~~~~
!!! error TS1206: Decorators are not valid here.
            ~~~
!!! error TS7005: Variable 'dec' implicitly has an 'any' type.
    
==== file4.ts (1 errors) ====
    // ok
    export @dec class C4 {}
            ~~~
!!! error TS7005: Variable 'dec' implicitly has an 'any' type.
    
==== file5.ts (1 errors) ====
    // ok
    export default @dec class C5 {}
                    ~~~
!!! error TS7005: Variable 'dec' implicitly has an 'any' type.
    
==== file6.ts (3 errors) ====
    // error
    @dec export @dec class C6 {}
     ~~~
!!! error TS7005: Variable 'dec' implicitly has an 'any' type.
                ~~~~
!!! error TS8038: Decorators may not appear after 'export' or 'export default' if they also appear before 'export'.
!!! related TS1486 file6.ts:2:1: Decorator used before 'export' here.
                 ~~~
!!! error TS7005: Variable 'dec' implicitly has an 'any' type.
    
==== file7.ts (3 errors) ====
    // error
    @dec export default @dec class C7 {}
     ~~~
!!! error TS7005: Variable 'dec' implicitly has an 'any' type.
                        ~~~~
!!! error TS8038: Decorators may not appear after 'export' or 'export default' if they also appear before 'export'.
!!! related TS1486 file7.ts:2:1: Decorator used before 'export' here.
                         ~~~
!!! error TS7005: Variable 'dec' implicitly has an 'any' type.
    
==== file8.ts (1 errors) ====
    // ok
    @dec abstract class C8 {}
     ~~~
!!! error TS7005: Variable 'dec' implicitly has an 'any' type.
    
==== file9.ts (1 errors) ====
    // ok
    @dec export abstract class C9 {}
     ~~~
!!! error TS7005: Variable 'dec' implicitly has an 'any' type.
    
==== file10.ts (1 errors) ====
    // ok
    @dec export default abstract class C10 {}
     ~~~
!!! error TS7005: Variable 'dec' implicitly has an 'any' type.
    
==== file11.ts (1 errors) ====
    // ok
    export @dec abstract class C11 {}
            ~~~
!!! error TS7005: Variable 'dec' implicitly has an 'any' type.
    
==== file12.ts (1 errors) ====
    // ok
    export default @dec abstract class C12 {}
                    ~~~
!!! error TS7005: Variable 'dec' implicitly has an 'any' type.
    
==== file13.ts (3 errors) ====
    // error
    abstract @dec class C13 {}
    ~~~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
    ~~~~~~~~
!!! error TS2304: Cannot find name 'abstract'.
              ~~~
!!! error TS7005: Variable 'dec' implicitly has an 'any' type.
    
==== file14.ts (4 errors) ====
    // error
    export abstract @dec class C14 {}
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
           ~~~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
           ~~~~~~~~
!!! error TS2304: Cannot find name 'abstract'.
                     ~~~
!!! error TS7005: Variable 'dec' implicitly has an 'any' type.
    
==== file15.ts (3 errors) ====
    // error
    export default abstract @dec class C15 {}
                   ~~~~~~~~
!!! error TS2304: Cannot find name 'abstract'.
                            ~
!!! error TS1005: ';' expected.
                             ~~~
!!! error TS7005: Variable 'dec' implicitly has an 'any' type.
    